--- a/index.html
+++ b/index.html
@@ -10,46 +10,54 @@
 
     <header>
 
+        <i class="fas fa-bars"></i>
+
         <nav class="navbar">
+
             <ul>
-                <li class="menu">Index
+                <li>
+                    <a href="">A propos</a>
                     <ul>
-                        <li>Menu</li>
-                        <li>Connexion</li>
-                    </ul>
-                </li>
-
-                <li class="menu">Sites
-                    <ul>
-                        <li>Achats</li>
-                        <li>Reventes</li>
-                    </ul>
-                </li>
-
-                <li class="menu">Catégorie
-                    <ul>
-                        <li>Français</li>
-                        <li>Anglais</li>
-                    </ul>
-                </li>
-
-                <li class="menu">De tout
-                    <ul>
-                        <li>Et de rien</li>
-                        <li>On s'en fou</li>
-                    </ul>
-                </li>
-
-                <li class="menu">Contact
-                    <ul>
-                        <li>Moi ?</li>
-                        <li>Non le curé</li>
+                        <li><a href="">Achats</a></li>
+                        <li><a href="">Reventes</a></li>
                     </ul>
                 </li>
             </ul>
+
+            <ul>
+                <li>
+                    <a href="">Contact</a>
+                    <ul>
+                        <li><a href="">Service clientèle</a></li>
+                        <li><a href="">Administrateur</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="">Utilisateur</a>
+                    <ul>
+                        <li><a href="">Connexion</a></li>
+                        <li><a href="">Inscription</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="">Boutique</a>
+                    <ul>
+                        <li><a href="">Animaux</a></li>
+                        <li><a href="">Produits</a></li>
+                    </ul>
+                </li>
+            </ul>
+            
         </nav>
 
     </header>
 
+    <script src="https://kit.fontawesome.com/84aafb4cd1.js" crossorigin="anonymous"></script>
 </body>
 </html>
